align center issue
Fixed the align center issue, The problem was .card__calculator needs to be in the same row as .card__supervisor.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,7 +134,8 @@ footer {
 
     &__calculator {
       grid-column: 3 / -1;
-      transform: translateY(-50%);
+      grid-row: -1;
+      transform: translateY(50%);
     }
 
     &__karma {
